src/test/deca/context/valid/Objet/Lower-Field.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      nothing
//
// History:
//      created on 19/1/2022

class A {
    int x;
}

class B {
    float x;
}

{
    A a = new A();
    B b = new B();
    boolean y = a.x < b.x;
}