src/test/deca/context/invalid/Objet/And-Field-BadType.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      (RULE 3.33) Illegal operand type.
//
// History:
//      created on 19/1/2022

class A {
    boolean x;
}

class B {
    int x;
}

{
    A a = new A();
    B b = new B();
    boolean z = a.x && b.x;
}